Добавляет сборку webpack

--- a/index.html
+++ b/index.html
@@ -248,16 +248,6 @@
     </div>
   </template>
 
-  <script src="js/util.js"></script>
-  <script src="js/load.js"></script>
-  <script src="js/pin.js"></script>
-  <script src="js/ad-card.js"></script>
-  <script src="js/ads-filters.js"></script>
-  <script src="js/ads.js"></script>
-  <script src="js/ad-form-validity.js"></script>
-  <script src="js/active-mode.js"></script>
-  <script src="js/ad-form-status-message.js"></script>
-  <script src="js/ad-form.js"></script>
-  <script src="js/main.js"></script>
+  <script src="bundle.js"></script>
 </body>
 </html>
